# tmt

./: .coderabbit.yaml  .gitignore  .hadolint.yaml  .packit.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  .yamllint  AGENTS.md  Dockerfile  Makefile  POLARION_FIELD_LIMITATIONS.md  README.rst  conn-helper.sh  mypy.ini  pylintrc  pylock.toml  pyproject.toml  re-trigger-CI.txt  renovate.json  ruff.toml  setup.py  tmt.spec  trick.md  vaibhav_design.md  vaibhav_final_design.md  vaibhav_notes.md  vaibhav_poc_script.sh
.claude/: CLAUDE.md
.distro/: rpminspect.yaml
.distro/plans/: minimal.fmf  smoke.fmf  upstream.fmf
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  labels.yaml  pull_request_template.md  release-drafter.yml  renovate-config.json  renovate.json
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/settings/: enforced.json  override.json
.github/workflows/: build-and-publish-renovate.yml  ci.yml  codeql.yml  doc-linkcheck.yml  doc-tests.yml  draft.yml  gen-files.yml  pre-commit.yml  publish-images.yml  release.yml  renovate.yml  shellcheck.yml  step-build-wheel.yml  step-doc-tests.yml  step-pre-commit.yml  step-shellcheck.yml  sync-labels.yml
agents/: AGENTS.md  quarter-news.md  release-notes.md
ansible/: packages.yml
completions/bash/: tmt
containers/: Containerfile  Containerfile.alpine  Containerfile.coreos  Containerfile.full  Containerfile.mini  Containerfile.renovate
containers/alpine/: Containerfile  Containerfile.upstream
containers/fedora/: 45
containers/proxy/: build.sh  tmt-container.spec  tmt-proxy.sh
docs/: Makefile  classes.rst  codespell.dic  codespell.ignore  conf.py  contribute.rst  environment.rst  examples.rst  glossary.rst  guide.rst  index.rst  lint-checks.rst.j2  overview.rst  questions.rst  releases.rst  runner-guest-compatibility.yaml  spec.rst  stories.rst  story.rst.j2  test-checks.rst.j2  test-runner-guest-compatibility.yaml  tmt.1  toolbelt-catalog.yaml
docs/_static/: custom.css  tmt-custom.css  tmt-custom.js
docs/code/: classes.rst  index.rst  plugin-introduction.rst  plugins.rst  template-extensions.rst  template-filters.rst  trees.rst
docs/ext/: generate_hardware_matrix.py  generate_lint_checks.py  generate_plugins.py  generate_release_notes.py  generate_stories.py  generate_template_extensions.py  generate_test_runner_guest_matrix.py  linkcheck_cache.py  sphinx_apidoc.py  tmt_setup.py
docs/guide/: execute-tests.inc.rst  guest-preparation.inc.rst  image-mode.inc.rst  matrix.inc.rst  test-runner-guest-compatibility-matrix.inc.rst  test-runner.inc.rst  testing-farm.inc.rst
docs/news/: 2026-q1.md  2026-q2.md
docs/plugins/: cleanup-header.inc.rst  finish-header.inc.rst  index.rst  prepare-feature.rst  prepare-header.inc.rst  provision-header.inc.rst  report-header.inc.rst  test-checks-header.inc.rst
docs/release/: main.fmf
docs/releases/: index.rst
docs/scripts/: generate-hardware-matrix.py  generate-lint-checks  generate-lint-checks.py  generate-plugins.py  generate-runner-guest-matrix.py  generate-stories  generate-stories.py  generate-template-extensions.py  generate-template-filters.py  generate-test-checks.py  generate-test-runner-guest-matrix.py
docs/spec/: context.rst  core.rst  hardware.rst  plans.rst  policy.rst  recipe.rst  results.rst  stories.rst  tests.rst
docs/stories/: cli.rst  deferred.rst  docs.rst  features.rst  install.rst
docs/templates/: hardware-matrix.rst.j2  lint-checks.rst.j2  plugins.rst.j2  runner-guest-compatibility-matrix.rst.j2  story.rst.j2  template-extensions.rst.j2  template-filters.rst.j2  test-checks.rst.j2  test-runner-guest-compatibility-matrix.inc.rst.j2
docs/tldr/: tmt-run.md  tmt-try.md  tmt.md
example-Vagrantfiles/: Vagrantfile.simple
examples/ansible/: plan.fmf  test.yml
examples/convert/: runtest.sh
examples/crash-detection/: main.fmf
examples/discover/: discover.fmf
examples/environment/: main.fmf
examples/fedora/: rpmdeplint.fmf  rpminspect.fmf
examples/httpd/: smoke.fmf
examples/inherit/: main.fmf
examples/l2/: artifacts.fmf  bed.fmf  gating.fmf  rpmdiff.fmf  simple.fmf  tooling.fmf  workflow.fmf
examples/local/: plan.fmf
examples/manual/: full.md  main.fmf  mini.md
examples/mini/: ci.fmf
examples/multiple/: basic.fmf
examples/plugins/: discover.py  provision.py  pyproject.toml
examples/plugins/example/: discover.py  provision.py
examples/plugins/example/schemas/discover/: example.yaml
examples/plugins/example/schemas/provision/: example.yaml
examples/polarion-run-report/: README.md  plan.fmf  test.fmf  test.sh
examples/polarion-story/: README.md  story.fmf
examples/redis/: plan.fmf  test.fmf  test.sh
examples/rtt/: install.fmf  post-install.fmf
examples/systemd/: ci.fmf
examples/template/: README.rst  main.fmf  test.sh
examples/together/: main.fmf
examples/vagrant/: Vagrantfile.real_prod
packaging/rpm/: gating.yaml  rpminspect.yaml  tmt.rpmlintrc  tmt.spec
plans/: basic.fmf  beakerlib.fmf  helps.fmf  main.fmf  packages.yml  shell.fmf  smoke.fmf  steps.fmf
plans/dev/: main.fmf  pip.fmf
plans/features/: advanced.fmf  basic.fmf  core.fmf  extended-unit-tests.fmf  (+2 more)
polarion-inspect/: BACKWARD_COMPATIBILITY_REMOVAL.md  CUSTOM_FIELDS_DISCOVERY.md  POLARION_CODE_CLEANUP_SUMMARY.md  README.md  check_work_item_suds.py  discover_custom_fields.py  inspect_polarion_fields_v2.py  list_polarion_service_methods.py  polarion-inspect.py  verify_custom_fields.py
prepare/: podman-images.sh
scripts/: README.md  bootstrap  common.py  list-new-contributors  manage_containers.py  release  sprint-overview  sprint-sync
spec/: policies.fmf  policy.fmf  profiles.fmf  recipe.fmf  results.fmf
stories/: docs.fmf  install.fmf
tests/: .envrc  __init__.py  conftest.py  images.sh  main.fmf
tmt/: __init__.py  __main__.py  _bootstrap.py  _queue.py  _version.py  ansible.py  base.py  beakerlib.py  cli.py  convert.py  export.py  guest.py  hardware.py  identifier.py  lint.py  log.py  options.py  policy.py  profiles.py  queue.py  recipe.py  result.py  templates.py  trying.py  utils.py
(+2158 files in other folders)
