[build-system]
# Using hatchling as build backend because EPEL9 setuptools (53.0.0) does not build with PEP517 properly
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo-plugins"
version = "0.0.1"
dependencies = [
    "tmt",
    ]

[tool.hatch.build.targets.wheel]
packages = [
    "example",
]

[project.entry-points."tmt.plugin"]
ProvisionExample = "example.provision:ProvisionExample"
DiscoverExample = "example.discover:DiscoverExample"

[project.entry-points."tmt.resources"]
ResourcesExample = "example"
